[metadata]
name = tox-timemachine
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
description = Run tox on a date in the past
long_description = file: README.rst
url = https://github.com/astrofrog/tox-timemachine
[options]
zip_safe = True
packages = find:
setup_requires = setuptools_scm
install_requires =
    tox
    setuptools
    pypi-timemachine

[options.entry_points]
tox =
    pypi-filter = tox_timemachine.plugin

[isort]
length_sort_stdlib = True

[flake8]
max-line-length = 100

[pycodestyle]
max_line_length = 100
